force-app/main/default/objects/Inventory__c/validationRules/Non_Negative_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Quantity__c &lt; 0, Reorder_Level__c &lt; 0)</errorConditionFormula>
    <errorMessage>Quantity and Reorder Level cannot be negative.</errorMessage>
</ValidationRule>